test: Use kotest